# rustonosmium

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  test.dbf  test.shp
benches/: osm_benchmark.rs
src/: bin.rs  lib.rs  osm_data.rs  osm_pbf.rs  quick_xml_reader.rs  shapefile_db.rs  xml_rs_reader.rs
src/databases/: fx_hash_id_db.rs  mod.rs  rtree_indexed_db.rs  rtree_indexed_disk_db.rs  temp_disk_db.rs
src/databases/indices/: mod.rs
src/databases/indices/r_tree/: in_memory.rs  mod.rs  nodes.rs  on_disk.rs
src/enc/: attribute_value_lookup.csv  catalog_reader.rs  data_fields.rs  data_types.rs  dataset_reader.rs  field_tree.rs  label_value_lookup.csv  mod.rs  object_lookup.csv  reader.rs
src/enc/chart_reader/: mod.rs  topology.rs
src/geometry/: mod.rs  planar.rs  spherical.rs
src/utils/: lazy_rw_lock.rs  mod.rs  simplify.rs
tests/data/S57/: Linked Dataset
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/: catalog.031
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7EMS01/: 1R7EMS01.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7EMS02/: 1R7EMS02.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7EMS03/: 1R7EMS03.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7EMS04/: 1R7EMS04.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD01/: 1R7WAD01.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD02/: 1R7WAD02.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD03/: 1R7WAD03.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD04/: 1R7WAD04.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD05/: 1R7WAD05.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD06/: 1R7WAD06.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD07/: 1R7WAD07.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD08/: 1R7WAD08.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD09/: 1R7WAD09.000
tests/data/S57/20240816_U7Inland_Waddenzee_week 33_NL/ENC_ROOT/1R/7/1R7WAD10/: 1R7WAD10.000
tests/data/shapefile/: test.shx
(+6 files in other folders)
