[package]
name = "rustonosmium"
version = "0.1.0"
authors = ["Lars Kroll <bathtor@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs 				= "0.8"
quick-xml 			= "0.20"
rustc-hash			= "1.1"
uom 				= "0.30"
geographiclib-rs	= "0.2"
approx 				= "0.4"
memmap 				= "0.7"
tempfile 			= "3.1"
bytes 				= "1.0"
lru 				= "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "osm_benchmark"
harness = false
