[package]
name = "rustonosmium"
version = "0.1.0"
authors = ["Lars Kroll <bathtor@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
quick-xml = { version = "0.31", features = ["encoding"] }
rustc-hash = "1"
uom = "0.35"
geographiclib-rs = "0.2"
approx = "0.5"
memmap = "0.7"
tempfile = "3"
bytes = "1"
lru = "0.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "osm_benchmark"
harness = false
